# changes since last release

  -- The SDC_Source_Type StateData was removed, as its purpose is now supplanted
     by the change to always keep the source terms in StateData (see below), and
     it was thus redundant. This does not change code output but does mean that
     old checkpoints generated while using SDC are no longer compatible with the
     current code. Normally we strive to maintain forward compatibility of
     checkpoints, but this change was considered justified because SDC is still
     considered an experimental feature under development and to our knowledge
     no production science runs have yet been done using SDC.

  -- The parameter gravity.max_solve_level was removed. This was added to work
     around convergence issues in the multigrid solve, but those convergence
     issues have since been fixed, so the parameter is no longer used.

  -- The Source_Type StateData now holds the actual old- and new-time sources
     (previously it held the source term predictor). This StateData is used to
     fill the sources_for_hydro MultiFab which provides the source terms used
     in the hydrodynamic update. Since it is StateData, this operation is done
     with a FillPatch. Consequently the sources_for_hydro data has meaningful
     data in both physical domain ghost zones and ghost zones at a coarse-fine
     interface (previously it only had meaningful data on fully interior ghost
     zones). Checkpoints will now have both old and new data. This change does
     result in a difference in the simulation output for simulations with source
     terms, as the answer will be different at the boundaries and at coarse-fine
     interfaces. (#116, #253) A related bug when using SDC was fixed too. (#56)

  -- The parameter castro.keep_sources_until_end has been removed.

  -- Source terms (gravity, rotation, etc.) have now been all coalesced into
     a single MultiFab. This reduces the memory footprint of the code. This