@@ -1,5 +1,9 @@
 # changes since last release
 
+  -- The sponge can now drive the system to a particular velocity (the default
+     is still zero velocity). The new parameters belong in the sponge namelist
+     in your probin file, and are named sponge_target_{x,y,z}_velocity.
+
   -- The SDC_Source_Type StateData was removed, as its purpose is now supplanted
      by the change to always keep the source terms in StateData (see below), and
      it was thus redundant. This does not change code output but does mean that
